# primerclip

./: .gitignore  LICENSE  README.md  notes.txt  primerclip-profile-200203.aux  primerclip-profile-200203.ps  primerclip.cabal  stack.yaml  tags
.stack-work/: stack.sqlite3
.stack-work/ghci/345449df/: cabal_macros.h
.stack-work/ghci/4a9d177b/: cabal_macros.h
.stack-work/ghci/509a6ea5/: cabal_macros.h
.stack-work/ghci/63842017/: cabal_macros.h
.stack-work/ghci/7e3deea8/: cabal_macros.h
.stack-work/ghci/8de27b8f/: cabal_macros.h
.stack-work/ghci/e4b3c7e2/: cabal_macros.h
.stack-work/install/x86_64-linux/4823bb974c979c9b1669f0832c38e1dba925d8ebd5c2f0d47a70dc9b860a8e1a/8.2.2/pkgdb/: package.cache  primerclip-0.3.8-5Ceh2mZvYivB3xn31nskpW.conf  primerclip-0.3.8-CSqlEA4IUhKBx9zRRn8Wqt.conf  primerclip-0.3.9.0-B4eNBT144IFE62RZPSEhEE.conf
.stack-work/install/x86_64-linux/lts-11.0/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  StateVar-1.1.0.4-3udXq0HXM3GEzK6HrsEWD7  ansi-terminal-0.8.0.2-IpPwz0rbeQT9XeWFhl38AU  ansi-wl-pprint-0.6.8.2-AFBJQxTmzbt6P0JlYhXs8j  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  attoparsec-0.13.2.2-LdMM8sClLoBJOTRqecqD19  base-orphans-0.7-CqEfBQ2VoSwBto5sloaJI4  bifunctors-5.5.2-KnDuhLcKNOkFzduUX7D9Nv  blaze-builder-0.4.0.2-lVErdDjTklBECglQVHluX  cabal-doctest-1.0.6-K34z9qJFa9S9lhohNycUoO  cereal-0.5.5.0-LlCRTX2XyPnC6qdZ6C2b02  cereal-conduit-0.8.0-J5W2XeYg8wlCnoP756hFKj  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  comonad-5.0.3-8SgMDAF6KMUAUEwcnApd6S  conduit-1.3.0-GVr3fUyKcjlKxWrTrlMIDk  conduit-combinators-1.3.0-9O40mZJpAM79yUtwGOr9Us  conduit-extra-1.3.0-ENTreHoUc6x2ncMG31MSPS  contravariant-1.4.1-8E6WUUTr4KUeVyUAaFXO6  digits-0.3.1-9jDuIymr3FALwDoIvtx88Z  distributive-0.5.3-F6z9Ydi0AiA6rP8AS0blTR  either-5-9shn4GTjB134COvJRjhDFi  exceptions-0.8.3-CYMTujxEbkkJnOJ7pW82ZD  hashable-1.2.7.0-LmYYwdRyxeo1gZdEWccp3y  integer-logarithms-1.0.2.1-KAhnLbvomfTHb5G0xy3U7G  monad-control-1.0.2.3-KW4P5rxfhfj5WtFbu3Ojsg  monad-loops-0.4.3-Ad5oA5oDZiu5B1obbGSEb1  mono-traversable-1.0.8.1-9BKbsLnAeJEK4ktbvOC2Yo  mtl-2.2.2-8XubxMJDT8QLsstvlNotkc  network-2.6.3.4-D6yy3exF2RyArU0wk1GgIu  optparse-applicative-0.14.2.0-7h0T7ONTR6AFGPMJCLb5iD  primerclip-0.3.0.0-KnrbWyjwLjFDOJPGn4qWDr  primerclip-0.3.2.0-4vTju4b4oawFuFWabKwXDg  primerclip-0.3.3.0-GfuurxY2OUOHPk7lKZLXUc  primerclip-0.3.4.0-1b5t2mlHPcvBmtAJ86MXDg  primerclip-0.3.5.0-1Jdeh124hxeEktoirzSRqe  primerclip-0.3.5.0-EKfIVVkqmIVLNVlfKBtA8g  primerclip-0.3.6.0-1K7EcsK8DuZLCNOW8bSus2  primerclip-0.3.7.0-L88uxLylEpc6bqYBJdLrT4  primerclip-0.3.7.1-2p381WPj6hVBJ8Mic3zHOM  (+27 more)
.stack-work/install/x86_64-linux/lts-11.0/8.2.2/pkgdb/: package.cache  primerclip-0.3.0.0-KnrbWyjwLjFDOJPGn4qWDr.conf  primerclip-0.3.1.0-5c3HlOybro165zxw25Gu42.conf  primerclip-0.3.2.0-4vTju4b4oawFuFWabKwXDg.conf  primerclip-0.3.3.0-GfuurxY2OUOHPk7lKZLXUc.conf  primerclip-0.3.4.0-1b5t2mlHPcvBmtAJ86MXDg.conf  primerclip-0.3.5.0-1Jdeh124hxeEktoirzSRqe.conf  primerclip-0.3.5.0-EKfIVVkqmIVLNVlfKBtA8g.conf  primerclip-0.3.6.0-1K7EcsK8DuZLCNOW8bSus2.conf  primerclip-0.3.7.0-L88uxLylEpc6bqYBJdLrT4.conf  primerclip-0.3.7.1-2p381WPj6hVBJ8Mic3zHOM.conf  primerclip-0.3.8.0-Cl0nEzVFxDZ7cRHrPAXRAm.conf  primerclip-0.3.9.0-6ImBJITSWSnHCgDyQWyU6.conf
.stack-work/install/x86_64-linux/lts-7.3/8.0.1/flag-cache/: MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  alex-3.1.7  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  cairo-0.13.3.0-HfBYJ9kMMT81ul794nd8cw  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  conduit-1.2.8-74aj802lulm9tmlIX3K7Jz  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  digits-0.3.1-4mVLFgw5UMbHTMvzLfMu2D  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  either-4.4.1.1-1JTyD8xndhVAzIXQKhnRWZ  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  free-4.12.4-Etm59Dm8iExFxAy1L49Ovd  happy-1.19.5  (+38 more)
app/: .Main.hs.swp  Main.hs
src/: .Lib.hs.swo  .Lib.hs.swp  Lib.hs
test/: .Spec.hs.swp  Spec.hs
workflows/: swift_analysis_pipeline_example_noVC_180123.sh  swift_analysis_pipeline_example_withVC_180123.sh  swift_analysis_pipeline_versions_and_definitions.md
(+56 files in other folders)
